NEW: kendall coef. ADD: retwiit impact and output to file

--- a/Taller3/Taller3.csproj
+++ b/Taller3/Taller3.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Graph.cs" />
+    <Compile Include="KendallCoef.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Taller3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
